# video-to-brain

./: .dockerignore  .editorconfig  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_EN.md  SECURITY.md  bot.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
docs/: telegram-setup.md
docs/demo/: sample-note-content.md  sample-note-study.md
examples/: basic_usage.py
src/: __init__.py  ai_processor.py  env_loader.py  large_download.py  note_generator.py  transcriber.py
tests/: conftest.py  test_ai_processor.py  test_analyze.py  test_bot.py  test_bot_extra.py  test_handle_video.py  test_large_download.py  test_llm_call.py  test_note_generator.py  test_transcriber.py  test_vault_security.py
