[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-to-brain"
version = "0.3.0"
description = "Send videos via Telegram → AI transcribes → Smart notes in Obsidian. Break 20MB limit."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Luna", email = "lunaai519@gmail.com"},
]
keywords = [
    "telegram", "whisper", "obsidian", "video", "transcription",
    "ai", "notes", "vibe-coding", "llm",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
    "Topic :: Text Processing :: General",
    "Topic :: Office/Business :: News/Diary",
]

dependencies = [
    "pyrogram>=2.0.0",
    "tgcrypto>=1.2.0",
    "openai-whisper>=20231117",
    "python-telegram-bot>=21.0",
]

[project.urls]
Homepage = "https://github.com/LunaAI519/video-to-brain"
Repository = "https://github.com/LunaAI519/video-to-brain"
"Bug Tracker" = "https://github.com/LunaAI519/video-to-brain/issues"
Changelog = "https://github.com/LunaAI519/video-to-brain/blob/main/CHANGELOG.md"

[project.scripts]
video-to-brain = "bot:main"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.ruff.lint.per-file-ignores]
"bot.py" = ["E402"]
"examples/*" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
